--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,14 @@
     "version": "1.0",
     "manifest_version": 2,
     "description": "Allows users to quickly convert regular text to a sarcastic format",
-    "browser_Action": {
-        "default_popup": "src/popup.html"
-    }
+    "icons": {
+        "48": "favicon.png"
+    },
+    "browser_action": {
+        "default_icon": "favicon.png",
+        "default_title": "Sponge Mock",
+        "default_popup": "src/popup.html",
+        "browser_style": true
+    },
+    "content_security_policy":"script-src 'self'; object-src 'self';"
 }
