--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,15 @@
 { 
-    "name": "Sarcasm Text",
+    "name": "Sponge Mock",
     "version": "1.0",
     "manifest_version": 2,
     "description": "Allows users to quickly convert regular text to a sarcastic format",
     "icons": {
-        "48": "favicon.png"
+        "48": "icons/48-spongemock.png",
+        "96": "icons/96-spongemock.png",
+        "128": "icons/128-spongemock.png"
     },
     "browser_action": {
-        "default_icon": "favicon.png",
+        "default_icon": "icons/48-spongemock.png",
         "default_title": "Sponge Mock",
         "default_popup": "src/popup.html",
         "browser_style": true
